@@ -1,1 +1,9 @@
 # projectmocha
+
+comandos necesarios: 
+
+### compilar
+javac --module-path /usr/share/openjfx/lib --add-modules javafx.controls ProjectMocha.java
+
+### ejecutar
+java --module-path /usr/share/openjfx/lib --add-modules javafx.controls ProjectMocha
